Log In page design complete

--- a/SpendSense-FrontEnd/SpendSense/src/App.css
+++ b/SpendSense-FrontEnd/SpendSense/src/App.css
@@ -1,6 +1,15 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
+
+/* Presentational styles */
+/* a {
+  color: #54b3d6;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  line-height: 1.5;
+  text-decoration: none;
+} */
