--- a/SpendSense-FrontEnd/SpendSense/src/features/user-account/LogIn.module.css
+++ b/SpendSense-FrontEnd/SpendSense/src/features/user-account/LogIn.module.css
@@ -36,11 +36,9 @@
     background-position: center;
     width: 100%;
   }
-}
 
-@media screen and (max-width: 1368px) {
   .card {
-    width: 320px;
+    width: 95vw;
     background: #ffffff;
     border: 4px solid #000000;
     box-shadow: 8px 8px 0 #000;
@@ -48,6 +46,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+  .labels {
+    background-color: whitesmoke;
+  }
+  .fieldsGap {
+    margin-bottom: 5%;
+    margin-left: 0.5rem;
   }
 }
 
