Updated CORS setting to allow React front end to connect and fixed typing error

--- a/SpendSense-FrontEnd/SpendSense/src/features/user-account/LogIn.module.css
+++ b/SpendSense-FrontEnd/SpendSense/src/features/user-account/LogIn.module.css
@@ -57,6 +57,12 @@
   }
 }
 
+.bottomElements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .spacing {
   margin-bottom: 5%;
 }
