--- a/SpendSense-FrontEnd/SpendSense/src/features/user-account/Registration.module.css
+++ b/SpendSense-FrontEnd/SpendSense/src/features/user-account/Registration.module.css
@@ -104,3 +104,45 @@
 .required {
   color: red;
 }
+/* todo: make loader global */
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #02006b;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.blurContainer {
+  filter: blur(5px);
+  pointer-events: none; /* disables clicks/interactions */
+  user-select: none; /* optional: prevent text selection */
+  transition: filter 0.3s ease;
+}
+
+/* Loading overlay */
+.loadingOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5); /* semi-transparent overlay */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
