--- a/SpendSense-FrontEnd/SpendSense/src/features/Dashboard/Dashboard.module.css
+++ b/SpendSense-FrontEnd/SpendSense/src/features/Dashboard/Dashboard.module.css
@@ -99,3 +99,75 @@
   width: 100%;
   margin-bottom: 3rem;
 }
+
+#netCashflowGrid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+#netCashflowHeader {
+  grid-column: 2;
+  height: fit-content;
+  justify-self: center;
+  align-self: center;
+  font-weight: 900;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#netCashflowValue {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row: 2;
+  font-weight: 900;
+  font-size: xx-large;
+  justify-self: center;
+  align-self: center;
+}
+
+#cashflowInfo {
+  display: grid;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-template-columns: 1fr 1fr; /* label/value in 2 columns */
+  gap: 0.25rem 0.25rem; /* row gap, column gap */
+  align-items: center;
+}
+
+#cashflowInfo li {
+  display: contents; /* makes the spans follow the parent's grid columns */
+}
+
+.cashflowLabel {
+  text-align: right;
+}
+
+.cashflowValue {
+  text-align: left;
+  font-weight: 700;
+}
+
+.negativeCashflow {
+  color: #dc2626;
+}
+
+.positiveCashflow {
+  color: green;
+}
+
+.cashflowErrorAndLoader {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* vertically center */
+  justify-content: center; /* horizontally center */
+  grid-column: 1 / 4; /* span across all 3 columns */
+  grid-row: 2 / 4; /* optional: center vertically in your grid */
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  color: #dc2626;
+}
