Table and filters front end formatting

--- a/SpendSense-FrontEnd/SpendSense/src/features/Dashboard/Dashboard.module.css
+++ b/SpendSense-FrontEnd/SpendSense/src/features/Dashboard/Dashboard.module.css
@@ -143,11 +143,13 @@
 }
 
 .cashflowLabel {
-  text-align: right;
+  width: fit-content;
+  justify-self: end;
 }
 
 .cashflowValue {
-  text-align: left;
+  width: fit-content;
+  justify-self: start;
   font-weight: 700;
 }
 
